[package]
name = "libretakt"
version = "0.1.0"
edition = "2021"
default-run = "client"

# Required to use library in the `examples` folder
[lib]
bench = false

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
lto = true

[workspace]
members = ["mverb", "common"]

[workspace.dependencies]
common = { path = "common" }
uuid = { version = "1.11", features = ["v4", "serde"] } # uuid's fit well in this context.
url = "2.5"
futures-channel = "0.3.31"
tokio = { version = "1.48", features = ["full"] }
futures-util = "0.3.31"
log = "0.4.28"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mverb = {path = "mverb" }
common = { path = "common" }
url = {workspace = true}
futures-util = {workspace = true}
tokio = {workspace = true}
log = {workspace=true}
futures = "0.3.31"

egui = "0.27.0"

rodio = { version = "0.21", default-features = true }
serde_json = "1.0.145"
flume = "0.11.1"
serde_derive = "1.0.228"
tokio-tungstenite = "0.28.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
strum = "0.27"
strum_macros = "0.27"

# For cargo-fuzz
arbitrary = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
reqwasm = "0.5.0"
ewebsock = "0.5.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "client"

