[package]
name = "libretakt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
once_cell = "1.16.0"

[dependencies.libretakt]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "playback_params"
path = "fuzz_targets/playback_params_fuzz.rs"
test = false
doc = false
