[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "server"

[[bin]]
bench = false
path = "src/main_server.rs"
name = "server"

[dependencies]
common = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}
tokio-tungstenite = { workspace = true }
tokio = {workspace = true}
futures-util = {workspace = true}
futures-channel = {workspace = true}
log = {workspace=true}

actix-web="3.2.0" # duh
actix-web-actors="3" # actors specific to web
actix = "0.10.0" # actors

env_logger = "0.9.1"



